--- a/www/index.html
+++ b/www/index.html
@@ -28,10 +28,13 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-energized nav-title-slide-ios7">
+    <ion-nav-bar class="bar-stable nav-title-slide-ios7">
       <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
         Back
       </ion-nav-back-button>
+      <ion-nav-buttons side="right">
+          <button class="button-icon icon ion-gear-b" ng-click="$scope.edit()"></button>
+      </ion-nav-buttons>
     </ion-nav-bar>
     <!--
       The views will be rendered in the <ion-nav-view> directive below
