--- a/www/index.html
+++ b/www/index.html
@@ -33,9 +33,9 @@
       <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
         Back
       </ion-nav-back-button>
-      <ion-nav-buttons side="right">
+      <!-- <ion-nav-buttons side="right">
           <button class="button-icon icon ion-gear-b" ng-click="$scope.edit()"></button>
-      </ion-nav-buttons>
+      </ion-nav-buttons> -->
     </ion-nav-bar>
     <!--
       The views will be rendered in the <ion-nav-view> directive below
